...
    "message": "Número de celular",
    "module": "hcm-common"
  },
  {
    "code": "CORE_COMMON_SUBMIT",
    "locale": "en_DEMO",
    "message": "Submit",
    "module": "hcm-common"
  },
  {
    "code": "CORE_COMMON_SUBMIT",
    "locale": "pt_DEMO",
    "message": "Enviar",
...
    "message": "Nome da cabeça da família:",
    "module": "hcm-household"
  },
  {
    "code": "HOUSEHOLD_OVER_VIEW_ACTION_TEXT",
    "locale": "en_DEMO",
    "message": "Deliver Intervention",
    "module": "hcm-household"
  },
  {
    "code": "HOUSEHOLD_OVER_VIEW_ACTION_TEXT",
    "locale": "pt_DEMO",
    "message": "Entregar intervenção",
...
    "message": "Quantidade distribuída*",
    "module": "hcm-delivery"
  },
  {
    "code": "DELIVER_INTERVENTION_DELIVERY_COMMENT_LABEL",
    "locale": "en_DEMO",
    "message": "Delivery Comment",
    "module": "hcm-delivery"
  },
  {
    "code": "DELIVER_INTERVENTION_DELIVERY_COMMENT_LABEL",
    "locale": "pt_DEMO",
    "message": "Comentário de entrega",
...
