library i18;

const common = Common();
const attendance = Attendance();
const login = Login();
const forgotPassword = ForgotPassword();
const home = Home();
const beneficiaryId = BeneficiaryID();
const dataShare = DataShare();
const acknowledgementSuccess = AcknowledgementSuccess();
const adverseEvents = AdverseEvents();
...
